--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -3,15 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>service-registry</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
     <parent>
         <groupId>org.example</groupId>
         <artifactId>spring-microservices</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
+    <artifactId>config-server</artifactId>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
@@ -21,13 +19,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
-
     </dependencies>
 </project>
