--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
     <artifactId>spring-microservices</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <modules>
+        <module>service-registry</module>
+        <module>department-service</module>
+        <module>config-server</module>
+        <module>employee-service</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
@@ -21,7 +27,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-cloud.version>2024.0.0</spring-cloud.version>
     </properties>
-    <dependencyManagement>
+    <dependencyManagement> <!-- This can get propagated to child modules, but you have to list the groupId and artifactId-->
         <dependencies>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
@@ -32,4 +38,19 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <dependencies>  <!-- This gets automatically propagated to each child module -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.zipkin.reporter2</groupId>
+            <artifactId>zipkin-reporter-brave</artifactId>
+        </dependency>
+    </dependencies>
 </project>
