--- a/pom.xml
+++ b/pom.xml
@@ -10,15 +10,16 @@
         <version>3.4.3</version>
     </parent>
 
-    <groupId>org.example</groupId>
+    <groupId>lc.springmicroservices</groupId>
     <artifactId>spring-microservices</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>pom</packaging>
     <modules>
         <module>service-registry</module>
         <module>department-service</module>
         <module>config-server</module>
         <module>employee-service</module>
+        <module>wikimedia-stream-consumer</module>
     </modules>
 
     <properties>
@@ -27,6 +28,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-cloud.version>2024.0.0</spring-cloud.version>
     </properties>
+
     <dependencyManagement> <!-- This can get propagated to child modules, but you have to list the groupId and artifactId-->
         <dependencies>
             <dependency>
@@ -38,19 +40,55 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
     <dependencies>  <!-- This gets automatically propagated to each child module -->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.8.5</version>
         </dependency>
+
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-tracing-bridge-brave</artifactId>
         </dependency>
+
         <dependency>
             <groupId>io.zipkin.reporter2</groupId>
             <artifactId>zipkin-reporter-brave</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.42</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.42</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
