--- a/service-registry/pom.xml
+++ b/service-registry/pom.xml
@@ -4,14 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-registry</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
     <parent>
-        <groupId>org.example</groupId>
+        <groupId>lc.springmicroservices</groupId>
         <artifactId>spring-microservices</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1.0</version>
     </parent>
+
+    <artifactId>service-registry</artifactId>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
