--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>department-service</module>
         <module>config-server</module>
         <module>employee-service</module>
+        <module>wikimedia-stream-producer</module>
         <module>wikimedia-stream-consumer</module>
     </modules>
 
