--- a/wikimedia-stream-consumer/src/main/resources/application.yml
+++ b/wikimedia-stream-consumer/src/main/resources/application.yml
@@ -1,29 +1,19 @@
 spring:
-    application:
-        name: wikimedia-stream-service
-    kafka:
-      producer:
-        key-serializer: org.apache.kafka.common.serialization.StringSerializer
-        value-serializer: org.apache.kafka.common.serialization.StringSerializer
-        bootstrap-servers: localhost:9092
-        properties:
-          max.block.ms: 10000
-        delivery.timeout.ms: 3000
-        acks: 1
-
-server:
-  port: 8081
-
-app:
-  wikimedia:
-    stream-url: https://stream.wikimedia.org/v2/stream/recentchange
-
-resilience4j:
-  circuitbreaker:
-    instances:
-      kafka-producer:
-        slidingWindowSize: 10
-        failureRateThreshold: 50
-        waitDurationInOpenState: 10s
-        registerHealthIndicator: true
-
+  application:
+    name: wikimedia-stream-consumer
+  kafka:
+    admin:
+      auto-create: false
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: wikimedia-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+  datasource:
+    url: jdbc:postgresql://localhost:5432/mydatabase
+    username: myuser
+    password: mypassword
+  jpa:
+    hibernate:
+      ddl-auto: update
