change ports for wikimedia producer and consumer. remove hardcoded ports for test kafka. add instructions for using H2 web UI. move kafka topic to config

--- a/wikimedia-stream-consumer/src/main/resources/application.yml
+++ b/wikimedia-stream-consumer/src/main/resources/application.yml
@@ -2,8 +2,6 @@ spring:
   application:
     name: wikimedia-stream-consumer
   kafka:
-    admin:
-      auto-create: false
     bootstrap-servers: localhost:9092
     consumer:
       group-id: wikimedia-group
@@ -17,3 +15,17 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+
+server:
+    port: 8082
+
+app:
+  kafka:
+    topic:
+      wikimedia: wikimedia.recentchange
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
