--- a/wikimedia-stream-consumer/src/test/resources/application.yml
+++ b/wikimedia-stream-consumer/src/test/resources/application.yml
@@ -1,10 +1,5 @@
 spring:
-  application:
-    name: wikimedia-stream-consumer
   kafka:
-    admin:
-      auto-create: false
-    bootstrap-servers: localhost:5432
     consumer:
       group-id: wikimedia-group
       auto-offset-reset: earliest
@@ -13,8 +8,8 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
     driverClassName: org.h2.Driver
-    username: sa
-    password: password
+    username: abc
+    password:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
@@ -23,3 +18,14 @@ spring:
     console:
       enabled: true # Optional: Allows you to see the DB in your browser
       path: /h2-console
+
+app:
+  kafka:
+    topic:
+      wikimedia: wikimedia.recentchange
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
