--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,10 @@
     </dependencyManagement>
 
     <dependencies>  <!-- This gets automatically propagated to each child module -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
